questions ans answer display working

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css" >
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
         <p>View Highscores</p>
       </div>
       <div class="col-md-6">
-       
+
       </div>
       <div class="col-md-3">
         <p class="time"></p>
@@ -42,8 +42,8 @@
     <div class="row">
       <div class="col-md-3"></div>
       <div class="col-md-6">
-        <ul >
-          <button id="start" class="btn btn-info" >start Quiz</button>
+        <ul>
+          <button id="start" class="btn btn-info">start Quiz</button>
           <button id="answer1" class="btn btn-info">answer1</button>
 
         </ul>
@@ -54,7 +54,7 @@
     <div class="row">
       <div class="col-md-3"></div>
       <div class="col-md-6">
-        <ul >
+        <ul>
           <button id="answer2" class="btn btn-info">answer2</button>
 
         </ul>
@@ -65,7 +65,7 @@
     <div class="row">
       <div class="col-md-3"></div>
       <div class="col-md-6">
-        <ul >
+        <ul>
           <button id="answer3" class="btn btn-info">answer3</button>
 
         </ul>
@@ -76,7 +76,7 @@
     <div class="row">
       <div class="col-md-3"></div>
       <div class="col-md-6">
-        <ul >
+        <ul>
           <button id="answer4" class="btn btn-info">answer4</button>
 
         </ul>
@@ -84,13 +84,20 @@
       <div class="col-md-3"></div>
     </div>
 
-  </div>
+    <div class="row">
+      <div class="col-md-3"></div>
+      <div class="col-md-6" id="answerCheck"></div>
+      <div class="col-md-3"></div>
+    </div>
 
   </div>
+
+
+
+
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="script.js"></script>
-  <script src="time.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
