submit button and enter initial added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div id="conterner" class="container-fluid">
     <div class="row">
       <div class="col-md-3">
-        <p>View Highscores</p>
+        <a href = "#">View Highscores</a>
       </div>
       <div class="col-md-6">
 
@@ -47,7 +47,7 @@
           <button id="answer1" class="btn btn-info">answer1</button>
           <form method="POST">
             <div class="input-group">
-              <label id="initiallabel" for="initial">Enter initial</label>
+              <label id="initiallabel" for="initial">Enter initial-</label>
               <input type="text" name="initial" id="initial" placeholder="AB" />
               <button id="submit" class="btn btn-info">submit</button>
             </div>
