check and time function added but not working

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <button id="answer1" class="btn btn-info">answer1</button>
           <form method="POST">
             <div class="input-group">
-              <label id="initiallabel" for="initial">Enter initial-</label>
+              <label id="initiallabel" for="initial">Enter initial</label>
               <input type="text" name="initial" id="initial" placeholder="AB" />
               <button id="submit" class="btn btn-info">submit</button>
             </div>
