--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div id="conterner" class="container-fluid">
     <div class="row">
-      <div class="col-md-3">
+      <div class="col-md-3" id="highScores">
         <a href = "#">View Highscores</a>
       </div>
       <div class="col-md-6">
