--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 </head>
 
 <body>
-  <div id="conterner" class="container-fluid">
+  <div id="container" class="container-fluid">
     <div class="row">
-      <div class="col-md-3" id="highScores">
-        <a href = "#">View Highscores</a>
+      <div class="col-md-3" >
+        <a href = "highscore.html">View Highscores</a>
       </div>
       <div class="col-md-6">
 
