localstorage set,highscores html and features need to be workedon

--- a/highscore.html
+++ b/highscore.html
@@ -40,9 +40,8 @@
             <div class="col-md-6">
 
                 <span class="input-group-btn">
-                    <button href="index.html" id="goBack" class="btn btn-secondary" type="button" aria-label="">Go
-                        Back</button>
-                    <button id="clear" class="btn btn-secondary" type="button" aria-label="">Clear</button>
+                    <button href="index.html" id="goBack" class="btn btn-info" >Go Back</button>
+                    <button id="clear"class="btn btn-info" >Clear</button>
                 </span>
 
 
