highscore.html delected

--- a/index.html
+++ b/index.html
@@ -125,9 +125,14 @@
     </div>
     <div class="row">
       <div class="col-md-3"></div>
-      <div class="col-md-6" id="highScoresBtn">
+
+      <div class="col-md-3" id="highScoresBtn">
         <span class="input-group-btn">
           <button id="goBack" class="btn btn-info">Go Back</button>
+        </span>
+      </div>
+      <div class="col-md-3" id="highScoresBtn">
+        <span class="input-group-btn">
           <button id="clear" class="btn btn-info">Clear</button>
         </span>
       </div>
